# gameboy

./: .gitignore  Cargo.nix  Cargo.toml  DMG_ROM.hex  README.md  accesses  bootrom.asm  crate-hashes.json  release.nix  shell.nix
.buildkite/: pipeline.dhall  pipeline.yaml
nix/: nixpkgs.nix  rust.nix  sources.json
src/: alu.rs  app.rs  breakpoints_view.rs  cpu.rs  cpu_control_view.rs  debug_gui.rs  debugger.rs  expr.rs  future_driver.rs  futures_bridge.rs  game.rs  gameboy_view.rs  hack_vdom.rs  hardware.rs  headless.rs  instr.rs  lib.rs  main.rs  mem.rs  mem_view.rs  monoid.rs  mutable_effect.rs  ppu.rs  read_view_u8.rs  records_main.rs  reg_view.rs  register.rs  register_kind.rs  screen.rs  sound.rs  terminal.rs  tile_debug.rs  trace.rs  utils.rs  web_utils.rs
tests/golden_master/: golden_test_schema.dhall  golden_tests.dhall  stitch.sh
www/: index.html  index.js  package-lock.json  package.json
