[package]
name = "gameboy"
version = "0.1.0"
authors = ["Brandon Kase <bkase@o1labs.org>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
packed_struct = "0.3"
packed_struct_codegen = "0.3"
js-sys = "0.3.17"
virtual-dom-rs = "0.6.7"
css-rs-macro = "0.1"
futures-preview = "0.3.0-alpha.13"
futures-util-preview = "0.3.0-alpha.13"
futures-signals = "0.3.4"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'MouseEvent',
  'console',
  'Element',
  'HtmlElement',
  'HtmlCanvasElement',
  'CanvasRenderingContext2d',
  'ImageData',
  'Node',
  'Window',

# audio
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
proptest = "0.9.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
